--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -15,3 +15,13 @@ p a{
     color: aquamarine;
     font-size: 16px;
 }
+
+h2{
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
+}
+h4{
+    font-size: 21px;
+    color: gray;
+}
